fix tags gap

--- a/style.css
+++ b/style.css
@@ -156,19 +156,15 @@ li {
   flex-wrap: wrap;
   justify-content: start;
   margin: 0 0 10px;
+  gap:6px
 }
-@media screen and (max-width: 335px) {
-  .techstack {
-    margin-top: 7px;
-  }
-}
+
 
 .techstack {
   font-size: 14px;
   border-radius: 10px;
   border: 1px solid;
   padding: 0 5px;
-  margin-left: 7px;
   color: #899096;
 }
 .stack {
